--- a/Week02_Task_No_02.ipynb
+++ b/Week02_Task_No_02.ipynb
@@ -729,11 +729,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0545fd14-e1b1-4fe8-8c08-783de5407ed0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import ast "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c70bd671-b31a-418e-94eb-73f6f9c0d8d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def converrt(text):\n",
+    "    L = []\n",
+    "    for i in ast.literal_eval(text):\n",
+    "        L.append(i['name'])\n",
+    "    return L"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e175b844-ac9e-472a-b538-a1c3f7cf8162",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies['genres'] = "
+   ]
   }
  ],
  "metadata": {
